--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.44.4",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "icons": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18",
