--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.44.4",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.3.24",
     "icons": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.417.0",
     "next": "14.2.5",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
