--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.12",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
     "icons": "^1.0.0",
